--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <div></div>
                 <div></div>
               </div>
-              <div class="symbol light-text" translate="no">(H)</div>
+              <div class="symbol light-text" translate="no"></div>
               <div></div>
             </div>
             <element id="Fluorine"  class="pink"></element>
