--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
           </div>
           <div class="elementrow flex-col flex-end">
-            <h1 style="text-align: center">Nhóm --> IA</h1>
+            <h1 style="text-align: center">Nhóm -> IA</h1>
             <element id="Hydrogen" class="pink"></element>
             <element id="Lithium" class="green"></element>
             <element id="Sodium" class="green"></element>
