--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <element id="Radium" class="green"></element>
           </div>
           <div class="elementrow flex-col flex-end">
-            <h1 style="text-align: center">IIIB</h1>
+            <h1 style="text-align: center; fontsize:13">IIIB</h1>
             <element id="Scandium" class="green"></element>
             <element id="Yttrium" class="green"></element>
             <element id="Lanthanum" class="green"></element>
